force-app/main/default/objects/Recovery_process_Status__mdt/Recovery_process_Status__mdt.object-meta.xml
<CustomObject>
    <label>Recovery process Status</label>
    <pluralLabel>Recovery process Statuses</pluralLabel>
</CustomObject>