force-app/main/default/objects/Recovery_process_Status__mdt/fields/Next_Recovery_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Recovery_Status__c</fullName>
    <label>Next Recovery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Finalisation Declined</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>