force-app/main/default/objects/Recovery_process_Status__mdt/fields/Previous_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Process_Status__c</fullName>
    <label>Previous Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Response</fullName>
            </value>
            <value>
                <fullName>Payment Details Received</fullName>
            </value>
            <value>
                <fullName>Queued for Payment Processing</fullName>
            </value>
            <value>
                <fullName>Submitted to Finance</fullName>
            </value>
            <value>
                <fullName>Findel Approved</fullName>
            </value>
            <value>
                <fullName>Payment Ready</fullName>
            </value>
            <value>
                <fullName>Payment Sent</fullName>
            </value>
            <value>
                <fullName>Payment Finalised</fullName>
            </value>
            <value>
                <fullName>Submitted for Voucher Issuance</fullName>
            </value>
            <value>
                <fullName>Voucher Created</fullName>
            </value>
            <value>
                <fullName>Voucher Sent</fullName>
            </value>
            <value>
                <fullName>Submitted for Finalisation</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>