force-app/main/default/objects/Recovery_process_Status__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit_Card_Recovery</fullName>
            </value>
            <value>
                <fullName>EFT_Recovery</fullName>
            </value>
            <value>
                <fullName>Other_Recovery</fullName>
            </value>
            <value>
                <fullName>Travel_Voucher_Recovery</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>