force-app/main/default/objects/Recovery_process_Status__mdt/listViews/All_Fields_View.listView-meta.xml
<ListView>
    <fullName>All_Fields_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Record_Type__c</columns>
    <columns>Previous_Process_Status__c</columns>
    <columns>Current_Process_Status__c</columns>
    <columns>Current_Recovery_Status__c</columns>
    <columns>Next_Process_Status__c</columns>
    <columns>Previous_Recovery_Status__c</columns>
    <columns>Next_Recovery_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields View</label>
    <language>en_US</language>
</ListView>